# advent-of-code

./: README.md
aoc_2024/: Cargo.toml
aoc_2024/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day6_attempt_1.rs  day7.rs  day8.rs  day9.rs  day_1_data.rs  main.rs
aoc_2024/src/puzzle_inputs/: .gitignore
