[package]
name = "aoc_2024"
description = "Advent of Code 2024 Rust Implementation by James Ebert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.9"
clap = { version = "4.5.21", features = ["derive"] }
colog = "1.3.0"
env_logger = "0.11.5"
log = "0.4.22"
